--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="software developer, C#, ASP.NET Core, React, JavaScript, SQL Server, web development">
     <meta name="author" content="Bejoy Alson">
     <meta name="theme-color" content="#0d47a1">
-    
+    <meta name="google-site-verification" content="oIjsAIe1k9tQ_-KYMO1eGtfxKUcbcf9NC9YDu-JEYmc" />
     <!-- Open Graph for social sharing -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bejoy Alson — Full-Stack Software Developer">
