--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="C# / ASP.NET Core / React / SQL Server specialist. Building production-grade web applications.">
     <meta property="og:url" content="https://bejoyalson.github.io/">
     <meta property="og:image" content="https://bejoyalson.github.io/assets/og-image.png">
-    
+    <meta name="msvalidate.01" content="32D149341791E0CCA6C47250A3F9FD6E" />
     <!-- Canonical tag (important for SEO) -->
     <link rel="canonical" href="https://bejoyalson.github.io/">
     
